--- a/backend/package.json
+++ b/backend/package.json
@@ -25,13 +25,19 @@
 	},
 	"dependencies": {
 		"@mojule/entity-app": "^0.4.3",
+		"@types/bcryptjs": "^2.4.6",
 		"@types/cookie-parser": "^1.4.5",
+		"@types/passport": "^1.0.16",
 		"@types/pug": "^2.0.8",
+		"bcryptjs": "^2.4.3",
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"express-async-handler": "^1.2.0",
+		"express-validator": "^7.0.1",
 		"mongoose": "^8.0.0",
+		"passport": "^0.7.0",
 		"pug": "^3.0.2",
 		"zod": "^3.22.4"
 	}
