--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
 		"@types/cors": "^2.8.15",
 		"@types/dotenv": "^8.2.0",
 		"@types/express": "^4.17.20",
+		"@types/express-session": "^1.17.10",
 		"@types/mongoose": "^5.11.97",
 		"cookie-parser": "^1.4.6",
 		"cookieparser": "^0.1.0",
@@ -24,10 +25,11 @@
 		"typescript": "^5.2.2"
 	},
 	"dependencies": {
-		"@mojule/entity-app": "^0.4.3",
+		"@mojule/entity-app": "^0.3.3",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/cookie-parser": "^1.4.5",
 		"@types/passport": "^1.0.16",
+		"@types/passport-local": "^1.0.38",
 		"@types/pug": "^2.0.8",
 		"bcryptjs": "^2.4.3",
 		"compression": "^1.7.4",
@@ -35,9 +37,11 @@
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"express-async-handler": "^1.2.0",
+		"express-session": "^1.17.3",
 		"express-validator": "^7.0.1",
 		"mongoose": "^8.0.0",
 		"passport": "^0.7.0",
+		"passport-local": "^1.0.0",
 		"pug": "^3.0.2",
 		"zod": "^3.22.4"
 	}
