--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
 		"@mojule/entity-app": "^0.3.3",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/cookie-parser": "^1.4.5",
+		"@types/jsonwebtoken": "^9.0.5",
 		"@types/passport": "^1.0.16",
 		"@types/passport-local": "^1.0.38",
 		"@types/pug": "^2.0.8",
@@ -39,6 +40,7 @@
 		"express-async-handler": "^1.2.0",
 		"express-session": "^1.17.3",
 		"express-validator": "^7.0.1",
+		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.0.0",
 		"passport": "^0.7.0",
 		"passport-local": "^1.0.0",
