--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,20 @@
 {
-	"name": "inventorymanagement",
+	"name": "messagingapp",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "nodemon",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"dev": "nodemon",
+		"start": "nodemon dist/index.js",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "tsc",
+		"nodemoninit": "nodemon dist/index.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@flydotio/dockerfile": "^0.5.0",
 		"@types/compression": "^1.7.4",
 		"@types/cors": "^2.8.15",
 		"@types/dotenv": "^8.2.0",
